--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,7 +41,11 @@ add_library( Boost::predef ALIAS boost_predef )
 
 else()
 
+FILE(GLOB_RECURSE headers include/*.h include/*.hpp)
+
 idf_component_register(
+    SRCS
+        ${headers}
     INCLUDE_DIRS
         include
 )
